documentation and parallelization in PrecisionRecallStats